--- a/HTML/zaid web/volim/index.html
+++ b/HTML/zaid web/volim/index.html
@@ -25,16 +25,16 @@
                         <a class="nav-link" href="#main_slider">HOME</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="#trainings">TRAININGS</a>
+                        <a class="nav-link" href="#trainings">Item 1</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="#classes">CLASSES</a>
+                        <a class="nav-link" href="#classes">Item 2</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="#shows">SHOWS</a>
+                        <a class="nav-link" href="#shows">Sale</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="#shortcides">SHORTCODES</a>
+                        <a class="nav-link" href="#shortcides">idk     </a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="#contact">CONTACT</a>
@@ -53,14 +53,14 @@
                <div class="carousel-item active">
                   <img class="d-block w-100" src="imgs/slider1.jpg" alt="slider_img">
                   <div class="ovarlay_slide_cont">
-                     <h2>Dance<br>to<br>the<br>beat</h2>
+                     <h2>Big<br>man<br>big<br>trend</h2>
                      <a class="blue_bt" href="#">Our Service</a>
                   </div>
                </div>
                <div class="carousel-item">
                   <img class="d-block w-100" src="imgs/slider1.jpg" alt="slider_img">
                   <div class="ovarlay_slide_cont">
-                     <h2>Dance<br>to<br>the<br>beat</h2>
+                     <h2>Other<br>cool<br>thing<br>idk</h2>
                      <a class="blue_bt" href="#">Our Service</a>
                   </div>
                </div>
@@ -79,7 +79,7 @@
          <div class="container">
             <div class="row">
                <div class="col-md-12 text_align_center">
-                  <h2 class="heading_section">TRAININGS</h3>
+                  <h2 class="heading_section">Flex trend 1</h3>
                </div>
             </div>
          </div>
@@ -102,7 +102,7 @@
          <div class="container">
             <div class="row">
                <div class="col-md-12 text_align_center">
-                  <h2 class="heading_section" style="margin-bottom: 65px;">Classes</h3>
+                  <h2 class="heading_section" style="margin-bottom: 65px;">Other trends</h3>
                </div>
             </div>
             <div class="row">
@@ -110,7 +110,7 @@
                <div class="col-md-4">
                   <div class="full dance_form_name">
                      <img src="imgs/d1.jpg" alt="#" />
-                     <h4>Ballet</h4>
+                     <h4>Fidget spinners</h4>
                   </div>
                </div>
 
@@ -124,28 +124,28 @@
                <div class="col-md-4">
                   <div class="full dance_form_name">
                      <img src="imgs/d1.jpg" alt="#" />
-                     <h4>Group Dance</h4>
+                     <h4>slider_img</h4>
                   </div>
                </div>
 
                <div class="col-md-4">
                   <div class="full dance_form_name">
                      <img src="imgs/d3.jpg" alt="#" />
-                     <h4>Dancers</h4>
+                     <h4>something</h4>
                   </div>
                </div>
 
                <div class="col-md-4">
                   <div class="full dance_form_name">
                      <img src="imgs/d4.jpg" alt="#" />
-                     <h4>Dancing</h4>
+                     <h4>fifa</h4>
                   </div>
                </div>
 
                <div class="col-md-4">
                   <div class="full dance_form_name">
                      <img src="imgs/d5.jpg" alt="#" />
-                     <h4>Girl</h4>
+                     <h4>bugs bunny</h4>
                   </div>
                </div>
             
@@ -182,7 +182,7 @@
          <div class="container">
             <div class="row">
                <div class="col-md-12 text_align_center" style="margin-bottom: 50px;">
-                  <h2 class="heading_section">SHORTCODE</h3>
+                  <h2 class="heading_section">Something else</h3>
                </div>
             </div>
             <div class="row">
